// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiLogLine /> tests search with highlight works 1`] = `
<div>
  <div
    class="logLine"
    style="--char-size: 3ch;"
  >
    <span
      class="lineNumber"
    >
      101
    </span>
    <span
      class="level"
    >
      INFO
    </span>
    <span
      class="time"
    >
      12:30 AM
    </span>
    <span
      class="out"
    >
      <span
        class=""
      >
        Error: something went 
        <mark
          data-current-search-result="true"
          data-search-result-index="1"
        >
          wrong
        </mark>
        <span />
      </span>
    </span>
  </div>
</div>
`;

exports[`<MultiLogLine /> tests search works 1`] = `
<div>
  <div
    class="logLine"
    style="--char-size: 3ch;"
  >
    <span
      class="lineNumber"
    >
      101
    </span>
    <span
      class="level"
    >
      INFO
    </span>
    <span
      class="time"
    >
      12:30 AM
    </span>
    <span
      class="out"
    >
      <span
        class=""
      >
        Error: something went 
        <mark
          data-search-result-index="1"
        >
          wrong
        </mark>
        <span />
      </span>
    </span>
  </div>
</div>
`;

exports[`<MultiLogLine /> tests snapshot test 1`] = `
<div>
  <div
    class="logLine"
    style="--char-size: 3ch;"
  >
    <span
      class="lineNumber"
    >
      101
    </span>
    <span
      class="level"
    >
      INFO
    </span>
    <span
      class="time"
    >
      12:30 AM
    </span>
    <span
      class="out"
    >
      <span
        class=""
      >
        Error: something went wrong
        <span />
      </span>
    </span>
  </div>
</div>
`;

exports[`<MultiLogLine /> tests works with link containing search text 2`] = `
<div>
  <div
    class="logLine"
    style="--char-size: 2ch;"
  >
    <span
      class="lineNumber"
    >
      2
    </span>
    <span
      class="level"
    >
      info
    </span>
    <span
      class="time"
    >
      20/08/2021 11:12:18
    </span>
    <span
      class="out"
    >
      <span
        class=""
      >
        + echo @wings-software:registry=
        <span>
          <span
            class=""
          >
            <a
              class="ansi-decoration-link"
              href="https://npm.pkg.github.com"
              rel="noreferrer"
              target="_blank"
            >
              https://npm.
              <mark
                data-current-search-result="true"
                data-search-result-index="0"
              >
                pk
              </mark>
              g.github.com
            </a>
            <span />
          </span>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`<MultiLogLine /> tests works with mutliple links containing search text 1`] = `
<div>
  <div
    class="logLine"
    style="--char-size: 2ch;"
  >
    <span
      class="lineNumber"
    >
      2
    </span>
    <span
      class="level"
    >
      info
    </span>
    <span
      class="time"
    >
      20/08/2021 11:12:18
    </span>
    <span
      class="out"
    >
      <span
        class=""
      >
        registry=
        <span>
          <span
            class=""
          >
            <a
              class="ansi-decoration-link"
              href="https://npm.pkg.github.com"
              rel="noreferrer"
              target="_blank"
            >
              https://npm.
              <mark
                data-current-search-result="true"
                data-search-result-index="0"
              >
                pk
              </mark>
              g.github.com
            </a>
            <span>
              <span
                class=""
              >
                , 
                <mark
                  data-search-result-index="1"
                >
                  pk
                </mark>
                g:harness, registry=
                <span>
                  <span
                    class=""
                  >
                    <a
                      class="ansi-decoration-link"
                      href="https://npm.pkg.github.com"
                      rel="noreferrer"
                      target="_blank"
                    >
                      https://npm.
                      <mark
                        data-search-result-index="2"
                      >
                        pk
                      </mark>
                      g.github.com
                    </a>
                    <span>
                      <span
                        class=""
                      >
                        , registry=
                        <span>
                          <span
                            class=""
                          >
                            <a
                              class="ansi-decoration-link"
                              href="https://npm.pkg.github.com"
                              rel="noreferrer"
                              target="_blank"
                            >
                              https://npm.
                              <mark
                                data-search-result-index="3"
                              >
                                pk
                              </mark>
                              g.github.com
                            </a>
                            <span />
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </span>
  </div>
</div>
`;
